Bug 149365 - Characters squeezed in text grid, affected by average character width
Summary: Characters squeezed in text grid, affected by average character width
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium normal
Assignee: Mark Hung
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-29 11:58 UTC by Mark Hung
Modified: 2022-06-21 13:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test document (12.32 KB, application/vnd.oasis.opendocument.text)
2022-05-29 11:59 UTC, Mark Hung
Details
screenshot with remark (20.00 KB, image/png)
2022-05-29 12:00 UTC, Mark Hung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2022-05-29 11:58:12 UTC
Description:
In text grid mode, it is required that there is at most one glyph in a grid cell. The test case shows that characters squeezed because of the following half-width kana characters, because the half-width kana are narrower than kanji glyphs.

Steps to Reproduce:
1. Open the attached text file.
2. Observe the first three glyphs '中中中' in the first line, comparing the to those in the second line.


Actual Results:
Three characters squeeze.

Expected Results:
Only one glyph is allowed in one grid cell.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.2.2 (x64) / LibreOffice Community
Build ID: 49f2b1bff42cfccbd8f788c8dc32c1c309559be0
CPU threads: 8; OS: Windows 10.0 Build 22000; UI render: Skia/Vulkan; VCL: win
Locale: zh-TW (zh_TW); UI: zh-TW
Calc: CL
Comment 1 Mark Hung 2022-05-29 11:59:02 UTC
Created attachment 180452 [details]
test document
Comment 2 Mark Hung 2022-05-29 12:00:38 UTC
Created attachment 180453 [details]
screenshot with remark
Comment 3 Commit Notification 2022-06-07 06:52:43 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7f310b8c2d8d496b38dd62aa6b06e61442e1a2d0

tdf#149365 tdf#149214 handle IVS and mix width chars

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.