tdf#149365 tdf#149214 handle IVS and mix width chars

in Justify::SnapToGrid correctly, and use it in
SwFntObj::GetTextBreak() and SwFntObj::GetModelPositionForViewPoint()
to get correct text positions before any further calculation.

In fntcache.cxx a simple formula was used to calculate the average
width of text grids occupied by ideographs. That's incorrect because 1)
for strings containing Unicode IVS, a ideograph is composed of several
sal_Unicode and the length of the string is not the same as the number
of ideographs contained. 2) The average width doesn't work because
character width varies, like ideograph and half-width kana in the
test case.

Change-Id: I863e8d8e346f555ff184a2f47d615e513b965b34